# aspiron

./: .env.example  .gitignore  .lintstagedrc.js  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_PLAN.md  Justfile  README.md  biome.json  docker-compose.yml  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json
apps/backend/: Cargo.toml  Dockerfile
apps/backend/bindings/: ActionTypeEnum.ts  AnswerRequest.ts  AttemptResultResponse.ts  AuthResponse.ts  AuthUserResponse.ts  ChapterDto.ts  ChaptersResponse.ts  CommunityThreadResponse.ts  CreateAttemptRequest.ts  CreateNoteRequest.ts  ErrorResponse.ts  ExamTypeEnums.ts  Insight.ts  InsightFilters.ts  InsightSeverity.ts  InsightSort.ts  InsightsQueryParams.ts  InsightsSortBy.ts  IssueSeverity.ts  LiveClassesResponse.ts  LowAttendanceMetadata.ts  MeResponse.ts  MobileTokenResponse.ts  OfflineTokenResponse.ts  OwnershipType.ts  PaginationResponse.ts  PainPointFilters.ts  PainPointQueryParams.ts  PainPointSortBy.ts  PatternInsight.ts  PatternInsightsResponse.ts  PlaybackTokenResponse.ts  QuestionResponse.ts  RecallAnswerRequest.ts  RecallAnswerResponse.ts  RecallResultResponse.ts  RecallSessionResponse.ts  RefreshTokenRequest.ts  RegisterUserRequest.ts  ResourceTypeEnum.ts  (+13 more)
apps/backend/openapi/: openapi.json
apps/backend/scripts/: contract-coverage.sh  validate-openapi.sh
apps/backend/src/: export_types.rs  lib.rs  main.rs
apps/backend/src/application/: macros.rs  mod.rs
apps/backend/src/application/assessment/: create_attempt.rs  get_attempt_results.rs  get_questions.rs  get_quiz.rs  get_quizzes.rs  mod.rs  ports.rs  submit_attempt.rs
apps/backend/src/application/auth/: get_current_user.rs  login.rs  mod.rs  ports.rs  refresh_token.rs
apps/backend/src/application/community/: mod.rs  ports.rs
apps/backend/src/application/content/: chapters_page_types.rs  get_chapters.rs  get_chapters_page_chapters.rs  get_chapters_page_insights.rs  get_chapters_page_summary.rs  get_offline_token.rs  get_subjects.rs  get_topic.rs  get_topics.rs  get_topics_page_insights.rs  get_topics_page_summary.rs  get_topics_page_topics.rs  get_videos.rs  mod.rs  ports.rs  topics_page_types.rs
apps/backend/src/application/insights/: get_insights.rs  get_topic_performance.rs  mod.rs  (+2 more)
apps/backend/src/constants/: mod.rs
apps/backend/src/domain/: mod.rs
apps/backend/src/entries/: mod.rs
apps/backend/src/http/: mod.rs
apps/backend/src/infra/: mod.rs
apps/backend/src/middleware/: auth.rs  client_type.rs  mod.rs
apps/backend/src/routes/: assessment.rs  auth.rs  community.rs  content.rs  health.rs  insights.rs  learning.rs  live_session.rs  mod.rs  notification.rs  rbac.rs  users.rs
apps/backend/src/seeds/: config.rs  database.rs  main.rs  mod.rs  quick_login.sh  runner.rs
apps/backend/src/services/: auth.rs  mod.rs  repository.rs  service.rs  users.rs
apps/backend/src/setup/: app.rs  cli.rs  config.rs  error.rs  mod.rs  openapi.rs  telemetry.rs
apps/backend/src/utils/: jwt.rs
apps/backend/tests/: harness.rs  integration_tests.rs  mod.rs
apps/backend/tests/fixtures/: context.rs  helpers.rs  mod.rs  scenario_builder.rs
apps/backend/tests/integration/: auth_middleware.rs  chapters_page.rs  content_dashboard.rs  mod.rs  notes_manager.rs  pain_points.rs  practice_tests.rs  recall_insights.rs  route_responses.rs  subjects_page.rs  topic_detail.rs  topics_page.rs
apps/backend/tests/scenarios/: chapters_page_flow.rs  content_dashboard.rs  context.rs  daily_revision_workflow.rs  helpers.rs  mod.rs  note_sharing_workflow.rs  pain_points_flow.rs  permission_evolution.rs  practice_tests_flow.rs  quiz_lifecycle.rs  recall_insights_flow.rs  recall_session_completion.rs  scenario_builder.rs  student_onboarding.rs  subjects_page_flow.rs  teacher_content_upload.rs  topic_detail_flow.rs  topics_page_flow.rs
apps/backend/tests/unit/: chapters_page.rs  chapters_page_snapshot.rs  content_dashboard.rs  content_dashboard_snapshot.rs  error_snapshot.rs  jwt.rs  mod.rs  notes_manager_snapshot.rs  notification_rules.rs  openapi_snapshot.rs  pain_points.rs  permissions.rs  practice_tests.rs  practice_tests_snapshot.rs  progression.rs  recall_algorithm.rs  recall_insights.rs  recall_insights_snapshot.rs  scoring.rs  subjects_page.rs  subjects_page_snapshot.rs  topic_detail.rs  topic_detail_snapshot.rs  topics_page.rs  topics_page_snapshot.rs
apps/migrations/: Cargo.toml
apps/migrations/src/: lib.rs  main.rs
apps/migrations/src/identifiers/: assessment_table.rs  auth_table.rs  community_table.rs  content_table.rs  learning_table.rs  live_table.rs  mod.rs  notification_table.rs  rbac_table.rs  user_table.rs
(+968 files in other folders)
