[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "*"
axum = { version = "*", features = ["macros"] }
tower = { version = "*", features = ["util", "filter"] }
tower-http = { version = "*", features = ["cors", "trace", "request-id"] }
jsonwebtoken = { version = "*", features = ["rust_crypto"] }
sea-orm = { version = "*", features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "with-uuid",
  "mock",
  "sqlx-postgres",
] }
tracing-subscriber = { version = "*", features = ["env-filter", "fmt", "json"] }
uuid = { version = "*", features = ["v4", "serde"] }
config = "*"
anyhow = "*"
validator = { version = "*", features = ["derive"] }
bcrypt = "*"
cookie = "*"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "*", features = ["axum"] }
reqwest = { version = "*", features = ["json", "native-tls"] }
once_cell = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
thiserror = "*"
tracing = "*"
tokio = { version = "*", features = ["full"] }
tokio-postgres = "*"
rand = { version = "0.8", features = ["small_rng", "std"] }
clap = { version = "*", features = ["derive"] }
fake = { version = "*", features = ["derive", "uuid", "chrono"] }
ts-rs = { version = "*", features = [
  "serde-compat",
  "chrono-impl",
  "uuid-impl",
  "serde-json-impl",
  "format",
] }
[dev-dependencies]
rstest = "*"
wiremock = "*"
testcontainers = "*"

[features]
seed = []

[[bin]]
name = "seed"
path = "src/seeds/main.rs"
required-features = ["seed"]

# [[bin]]
# name = "export-types"
# path = "src/export_types.rs"
