[package]
name = "migrations"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm-migration = "*"
tokio = { version = "*", features = ["full"] }
dotenvy = "*"
backend = { path = "../backend" }

[features]
default = ["runtime-async-std-native-tls"]
runtime-async-std-native-tls = [
  "sea-orm-migration/runtime-async-std-native-tls",
]
